@@ -26,9 +26,9 @@ task run(dependsOn: jar, type: JavaExec, description: "Runs the desktop project"
     systemProperties['assets.location'] = '../android/assets/'
     	
     // Parallel GC
-    //jvmArgs = ['-Xms2g', '-Xmx4g', '-XX:+UseParallelGC']
+    //jvmArgs = ['-Xms2g', '-Xmx4g', '-XX:+UseParNewGC']
     // CMS GC
-    jvmArgs = ['-Xms1g', '-Xmx2g', '-XX:+UseConcMarkSweepGC']
+    jvmArgs = ['-server', '-Xms1g', '-Xmx2g', '-XX:+UseConcMarkSweepGC', '-XX:+UseParNewGC', '-XX:MaxGCPauseMillis=5', '-XX:+CMSParallelRemarkEnabled', '-XX:CMSInitiatingOccupancyFraction=60', '-XX:MaxTenuringThreshold=4', '-XX:MaxNewSize=384m', '-XX:NewSize=384m', '-XX:SurvivorRatio=12']
     // G1 GC
     //jvmArgs = ['-Xms2g', '-Xmx4g', '-XX:+UseG1GC']
     classpath = sourceSets.main.runtimeClasspath
